--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Organize Your Day</string>
     <string name="nav_bar_home">Home</string>
     <string name="nav_bar_settings">Settings</string>
+    <string name="textAbout">SIMPLE</string>
+
 </resources>
