--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="nav_bar_settings">Settings</string>
     <string name="nav_bar_about">About</string>
     <string name="textAbout">SIMPLE</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="apply_button">Apply</string>
 
 </resources>
