Added SettingsFragment class and preferences layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,18 @@
         <item>2</item>
         <item>2</item>
     </string-array>
+
+
+
+    <string-array name="themes_list">
+        <item>Green Theme</item>
+        <item>Black Theme</item>
+        <item>Pink Theme</item>
+    </string-array>
+    <string-array name="themes_list_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
