--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
 
     <string-array name="themes_list">
         <item>Green Theme</item>
-        <item>Black Theme</item>
+        <item>Blue Theme</item>
         <item>Pink Theme</item>
     </string-array>
     <string-array name="themes_list_values">
